fix: dashboard balances overflow

--- a/src/components/Wallet/Dashboard/Balances/Balances.module.scss
+++ b/src/components/Wallet/Dashboard/Balances/Balances.module.scss
@@ -26,6 +26,8 @@
 
         .icon {
             border-radius: 100%;
+            width: 1.875rem;
+            height: 1.875rem;
         }
 
         .loadingOtherBalancesWrapper {
